Single Page Applications Part 1

--- a/src/App.css
+++ b/src/App.css
@@ -56,7 +56,7 @@
 .jumbotron {
   padding:70px 30px 70px 30px;
   margin:0px auto;
-  background: #9575CD ;
+  background: #9575CD !important;
   color:floralwhite;
 }
 
@@ -69,6 +69,8 @@ address{
 .navbar-dark {
   background-color: #512DA8;
 }
+
+
 
 
 
